--- a/.github/workflows/etl_pipeline.yml
+++ b/.github/workflows/etl_pipeline.yml
@@ -37,8 +37,6 @@ jobs:
       # NEON_DB_USER: ${{ secrets.NEON_DB_USER }}
       # NEON_DB_PASSWORD: ${{ secrets.NEON_DB_PASSWORD }}
       # NEON_DB_PORT: ${{ secrets.NEON_DB_PORT }}
-      # REVERSE_GEOCACHE_API_BASE: ${{ secrets.REVERSE_GEOCACHE_API_BASE  }}
-      # REVERSE_GEOCACHE_API_KEY: ${{ secrets.REVERSE_GEOCACHE_API_KEY  }}
       AVIEN_DB_CONNECTION: ${{ secrets.AVIEN_DB_CONNECTION_DEFAULT_DB }}
       # AVIEN_DB_CONNECTION: ${{ secrets.AVIEN_DB_CONNECTION_BSS_DB }}
 
@@ -61,80 +59,11 @@ jobs:
 
       - name: Run ETL Script
         id: run_script
-        run: python etl_past_day_script.py 2>&1 | tee etl_output.log
-        # run: python etl_script.py 2>&1 | tee etl_output.log
-
-      # The validation step is correctly placed here, after the script has run
-      - name: Validate Load Step Dependencies
-        run: |
-          if grep -q "AttributeError: module 'pandas.api.types' has no attribute 'StringDtype'" etl_output.log; then
-            echo "::error::ETL load step failed due to a dependency error."
-            exit 1
-          else
-            echo "Load step dependency check passed. No 'StringDtype' error found."
-          fi
-
-        # CHQ: step added by Gemini AI
-      - name: Validate Batch Coordinates Type
-        run: |
-          if grep -q "::error::The output of 'produce_batch_coordinates' is not a list." etl_output.log; then
-            echo "Type validation failed. The 'produce_batch_coordinates' function returned an invalid type."
-            exit 1
-          else
-            echo "Type validation passed. The 'produce_batch_coordinates' function returned a list."
-          fi
-
-      - name: Validate Fetch City And County
-        run: |
-          if grep -q "::error::ERROR - An unexpected error occurred during batch AI endpoint call" etl_output.log; then
-            echo "Data was not fetched."
-            exit 1 # Exit with a non-zero status to mark the job as failed
-          else
-            echo "Data fetched."
-          fi
-
-        # CHQ: step added by Gemini AI
-      - name: Validate API Response Structure
-        run: |
-          if grep -q "ERROR - An unexpected error occurred during batch AI endpoint call  : 'dict' object has no attribute 'features'" etl_output.log; then
-            echo "::error::ETL run failed: The API response was a dictionary, but it did not have the expected 'features' key."
-            exit 1
-          else
-            echo "API response structure validation passed. The 'features' key was found as expected."
-          fi
-
-      # CHQ: step added by Gemini AI (corrected position)
-      # - name: Validate Load Step Dependencies
-      #   run: |
-      #     if grep -q "AttributeError: module 'pandas.api.types' has no attribute 'StringDtype'" etl_output.log; then
-      #       echo "::error::ETL load step failed due to a dependency error."
-      #       exit 1 # Exit with a non-zero status to mark the job as failed
-      #     else
-      #       echo "Load step dependency check passed. No 'StringDtype' error found."
-      #     fi
-
-      # CHQ: step added by Gemini AI
-      - name: Check ETL Results for Data Loading Success
-        run: |
-          if grep -q "No data to load as DataFrame is empty" etl_output.log; then
-            echo "::error::ETL run considered a failure: No data was loaded into the database."
-            exit 1 # Exit with a non-zero status to mark the job as failed
-          else
-            echo "ETL run completed with data loaded (or no 'no data' warning found)."
-          fi
-
-      - name: Check ETL Results for properly loaded records from API endpoint
-        run: |
-          if grep "Error for record at original index" etl_output.log; then
-            echo "::error::ETL run considered a failure: Error for a record."
-            exit 1 # Exit with a non-zero status to mark the job as failed
-          else
-            echo "ETL run completed with records loaded (or no 'no data' warning found)."
-          fi
+        run: python db_migration_etl.py 2>&1 | tee etl_output.log
 
       - name: Check for new data
         # (Optional: for debugging)
-        # You could add steps here to verify data in Neon, e.g., using psql
+        # You could add steps here to verify data in Aiven, e.g., using psql
         # This step is just a placeholder to show where you might add checks.
         run: |
-          echo "ETL script finished. Check Neon database for updated data."
+          echo "ETL script finished. Check Aiven database for updated schema."
