--- a/.github/workflows/etl_pipeline.yml
+++ b/.github/workflows/etl_pipeline.yml
@@ -52,7 +52,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install -r requirements.txt
+          pip install --no-cache-dir --force-reinstall -r requirements.txt
 
       - name: Clean up old log file
         run: rm -f etl_output.log # Deletes the log file if it exists
