--- a/.github/workflows/etl_pipeline.yml
+++ b/.github/workflows/etl_pipeline.yml
@@ -49,6 +49,11 @@ jobs:
         with:
           python-version: "3.9" # Specify your Python version (e.g., 3.8, 3.9, 3.10)
 
+      - name: Install system dependencies for psycopg2
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y libpq-dev python3-dev
+
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
