--- a/.github/workflows/etl_pipeline.yml
+++ b/.github/workflows/etl_pipeline.yml
@@ -54,8 +54,8 @@ jobs:
           sudo apt-get update
           sudo apt-get install -y libpq-dev python3-dev
           python -m pip install --upgrade pip
-          pip install psycopg2 sqlalchemy
-        # pip install --no-cache-dir --force-reinstall -r requirements.txt
+          pip install --no-cache-dir --force-reinstall -r requirements.txt
+        # pip install psycopg2 sqlalchemy
 
       - name: Clean up old log file
         run: rm -f etl_output.log # Deletes the log file if it exists
